style.css
body {
  background-color: darkgray;
  margin: 0;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

#root {
  width: 100vw;
  margin: 0 auto;
}

.top-bar {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  height: 80px;
  padding: 10px;
}

.main-container {
  height: calc(100vh - 100px);
  display: flex;
  justify-content: center;
}

#score {
  font-size: 1.5rem;
  line-height: 1.5;
  margin-right: 2em;
  flex: 1;
}

.options-open {
  margin-left: 2em;
  height: 66px;
  flex: 1;
  display: block;
  border: 0;
  font-style: inherit;
  font-size: 1.2rem;
  outline: none;
  border-radius: 5px;
  background-color: rgb(7, 69, 68);
  color: #fff;
}

.options-wrapper {
  display: none;
  z-index: 2;
  background-color: rgba(0, 0, 0, 0.3);
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
}

.options-wrapper.show {
  display: block;
}

.options {
  box-sizing: border-box;
  background-color: #fff;
  border-radius: 10px;
  padding: 10px;
  width: 100%;
  max-width: 500px;
  margin: 50px auto;
  font-size: 16px;
}

.options h1 {
  text-align: center;
}

.options button {
  display: block;
  border: 0;
  font-style: inherit;
  font-size: 16px;
  outline: none;
  border-radius: 5px;
  background-color: orange;
  width: 100%;
  padding: 10px;
}
.score,
.controls {
  border: 0;
  width: 100%;
}

.score thead,
.controls thead {
  background-color: orange;
}

.score tbody tr:nth-child(2n),
.controls tbody tr:nth-child(2n) {
  background-color: rgba(0, 0, 0, 0.3);
}

.score td,
.score th,
.controls td,
.controls th {
  border: 0;
  text-align: center;
  padding: 4px;
}

